[package]
name = "coordinator_rs"
version = "0.1.1"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
axum = "0.6.20"
axum-macros = "0.3.8"
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.11.22", default-features = false, features = ["json"] }
yaml-rust = "0.4.5"
once_cell = "1.18.0"
num-bigint = "0.4.4"
itertools = "0.11.0"
log = "0.4.20"
env_logger = "0.9.0"
